padded the canvas by 1px.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     width:500px;
     height:600px;
     background-color:#4d0f00;
+    padding: 1px;
 }
 .frame{
     border: 50px solid black;
@@ -14,4 +15,5 @@
     width:425px;
     height:150px;
     background-color: #efb762;
+    margin:20px auto;
 }
